--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.distancecalculate.DistanceCalculationActivity"></activity>
+        <activity
+            android:name=".ui.directions.DirectionActivity"
+            android:exported="true" />
+        <activity android:name=".ui.distancecalculate.DistanceCalculationActivity" />
         <activity android:name=".MainHomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
