--- a/OptiGeofencingAndroid/build.gradle
+++ b/OptiGeofencingAndroid/build.gradle
@@ -36,7 +36,18 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    /*Map*/
+    api('com.google.maps.android:android-maps-utils:0.3.4')
+    api('com.google.android.gms:play-services-maps:17.0.0')
+    api('com.google.android.gms:play-services-location:17.0.0')
+    api('com.google.android.gms:play-services-places:17.0.0')
+    api('com.google.android.gms:play-services-plus:17.0.0')
+    api('com.google.android.libraries.places:places:2.4.0')
+    api('org.jetbrains.anko:anko-support-v4-commons:0.10.8')
 }
