--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,12 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation project(path: ':OptiGeofencingAndroid')
+
     /*retrofit service*/
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
@@ -58,15 +61,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.4.0'
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
-
-    /*Map*/
-    implementation 'com.google.maps.android:android-maps-utils:0.3.4'
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
-    implementation 'com.google.android.gms:play-services-places:17.0.0'
-    implementation 'com.google.android.gms:play-services-plus:17.0.0'
-    implementation 'com.google.android.libraries.places:places:2.4.0'
-    implementation 'org.jetbrains.anko:anko-support-v4-commons:0.10.8'
 
     /*Glide*/
     implementation 'com.github.bumptech.glide:glide:4.12.0'
