--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,13 +68,13 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    api('com.google.maps.android:android-maps-utils:0.3.4')
-    api('com.google.android.gms:play-services-maps:17.0.0')
-    api('com.google.android.gms:play-services-location:17.0.0')
-    api('com.google.android.gms:play-services-places:17.0.0')
-    api('com.google.android.gms:play-services-plus:17.0.0')
-    api('com.google.android.libraries.places:places:2.4.0')
-    api('org.jetbrains.anko:anko-support-v4-commons:0.10.8')
+//    api('com.google.maps.android:android-maps-utils:0.3.4')
+//    api('com.google.android.gms:play-services-maps:17.0.0')
+//    api('com.google.android.gms:play-services-location:17.0.0')
+//    api('com.google.android.gms:play-services-places:17.0.0')
+//    api('com.google.android.gms:play-services-plus:17.0.0')
+//    api('com.google.android.libraries.places:places:2.4.0')
+//    api('org.jetbrains.anko:anko-support-v4-commons:0.10.8')
 
     implementation project(path: ':OptiGeofencingAndroid')
 
